core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/annotations/non-literal-annotation.tessla
def @Foo(e: Events[Int])

in x: Events[Int]

@Foo(x)
out x